<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    style="@style/Fill">

    <LinearLayout style="@style/ActionBar">
        <ImageButton android:id="@+id/write_back_button"
            android:src="@drawable/ic_arrow_left"
            style="@style/ActionBarIconButton" />

        <TextView android:text="@string/write_title_label"
            style="@style/ActionBarTitle" />
    </LinearLayout>

    <FrameLayout style="@style/Flex">
        <!-- Form page -->
        <ScrollView android:id="@+id/write_form_page"
            style="@style/Fill">

            <LinearLayout style="@style/FormFlex">
                <TextView android:text="@string/write_title_label"
                    style="@style/FormTitle" />

                <TextView android:text="@string/write_form_description_label"
                    style="@style/FormDescription" />

                <EditText android:id="@+id/write_form_block_id_input"
                    android:hint="@string/write_form_block_id_label"
                    android:inputType="number"
                    style="@style/FormField">

                    <requestFocus />
                </EditText>

                <EditText android:id="@+id/write_form_data_ascii_input"
                    android:hint="@string/write_form_data_ascii_label"
                    android:inputType="textMultiLine"
                    android:maxLength="16"
                    style="@style/FormField" />

                <EditText android:id="@+id/write_form_data_hex_input"
                    android:hint="@string/write_form_data_hex_label"
                    android:inputType="textMultiLine"
                    android:maxLength="32"
                    style="@style/FormField" />

                <Button android:id="@+id/write_form_button"
                    android:text="@string/write_form_button"
                    style="@style/FormField" />
            </LinearLayout>
        </ScrollView>

        <!-- Waiting page -->
        <ScrollView android:id="@+id/write_waiting_page"
            android:visibility="gone"
            style="@style/Fill">

            <LinearLayout style="@style/Hero">
                <ImageView android:src="@drawable/ic_credit_card_scan"
                    style="@style/HeroIcon" />

                <TextView android:text="@string/write_waiting_title_label"
                    style="@style/HeroTitle" />

                <TextView android:text="@string/write_waiting_description_label"
                    style="@style/HeroDescription" />
            </LinearLayout>
        </ScrollView>

        <!-- Writing page -->
        <ScrollView android:id="@+id/write_writing_page"
            android:visibility="gone"
            style="@style/Fill">

            <LinearLayout style="@style/Hero">
                <ImageView android:src="@drawable/ic_credit_card_sync"
                    style="@style/HeroIcon" />

                <TextView android:text="@string/write_writing_title_label"
                    style="@style/HeroTitle" />

                <TextView android:text="@string/write_writing_description_label"
                    style="@style/HeroDescription" />
            </LinearLayout>
        </ScrollView>

        <!-- Success page -->
        <ScrollView android:id="@+id/write_success_page"
            android:visibility="gone"
            style="@style/Fill">

            <LinearLayout style="@style/Hero">
                <ImageView android:src="@drawable/ic_credit_card_check"
                    style="@style/HeroIcon" />

                <TextView android:text="@string/write_success_title_label"
                    style="@style/HeroTitle" />

                <TextView android:text="@string/write_success_description_label"
                    style="@style/HeroDescription" />

                <Button android:id="@+id/write_success_button"
                    android:text="@string/write_success_button"
                    style="@style/HeroButton" />
            </LinearLayout>
        </ScrollView>

        <!-- Error page -->
        <ScrollView android:id="@+id/write_error_page"
            android:visibility="gone"
            style="@style/Fill">

            <LinearLayout style="@style/Hero">
                <ImageView android:src="@drawable/ic_alert"
                    style="@style/HeroIcon" />

                <TextView android:text="@string/write_error_title_label"
                    style="@style/HeroTitle" />

                <TextView android:text="@string/write_error_description_label"
                    style="@style/HeroDescription" />

                <Button android:id="@+id/write_error_button"
                    android:text="@string/write_error_button"
                    style="@style/HeroButton" />
            </LinearLayout>
        </ScrollView>
    </FrameLayout>
</LinearLayout>
